I have added the addQuote functionality using the ngFor directive

--- a/src/app/quotes-form/quotes-form.component.css
+++ b/src/app/quotes-form/quotes-form.component.css
@@ -6,6 +6,8 @@
   color: grey;
 
 }
-.col-md-5 {
-  font-family:  'Anton', sans-serif;
+.col-md-6 {
+  font-family: 'Cuprum', sans-serif;
+  font-size: 20px;
+  padding-left: 2px;
 }
