--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -3,13 +3,16 @@
   <div class="col-md-6">
     <div class="form-group">
       <label for="description">Add a New Quote</label>
-      <textarea class="form-control" id="newquote" placeholder="Write Your Quote Here..."rows="4" required></textarea>
+      <textarea class="form-control" id="newquote" placeholder="Write Your Quote Here..."rows="4" required [(ngModel)]="newQuote"></textarea>
   <br>
-      <a type="submit" class="btn btn-submit" style="color: blue"><strong>SUBMIT</strong></a>
+      <a type="submit" class="btn btn-submit" style="color: blue" (click)="addQuote()"><strong>Add Quote</strong></a>
     </div>
   </div>
   <div class="col-md-6">
-    <p style="color: black"><strong>This is a list of AllQuotes</strong></p>
+    <p><strong>This is a list of All Quotes</strong></p>
+    <p class="life-container" *ngFor="let quote of quotes">
+      {{ quote }}
+    </p>
   </div>
   <div class="col-md-0"></div>
 </div>
