--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,7 @@
   font-size: 3em;
   margin-top: 25px;
   font-family: 'Gamja Flower', cursive;
+  text-align: center;
 
 }
 
@@ -20,6 +21,7 @@
 }
 
 .row {
+  /*background-image: url("assets/ground.jpeg");*/
   background-color: #bad6dd;
   margin-left: 70px;
   margin-right: 70px;
