--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2"></div>
+    <div class="col-md-2" style="background-color: #123456"></div>
     <div class="col-md-8">
-      <h1 id="Title">AllQuotes</h1>
+      <h1 id="Title">Quotes</h1><hr><hr>
       <p id="chant">A Chance to <strong>Share Your Quotes</strong> with the World.</p>
       <hr>
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <app-quotes-form></app-quotes-form>
   </div>
 </div>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-2" style="background-color:#123456"></div>
   </div>
 </div>
 
