--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
+<div class="container-fluid" style="background-color: #123456">
   <div class="row">
     <div class="col-md-2" style="background-color: #123456"></div>
     <div class="col-md-8">
-      <h1 id="Title">Quotes</h1><hr><hr>
+      <h1 id="Title">Quotes</h1><hr>
       <p id="chant">A Chance to <strong>Share Your Quotes</strong> with the World.</p>
       <hr>
 
