--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-2" style="background-color: #123456"></div>
     <div class="col-md-8">
       <h1 id="Title">Quotes</h1><hr>
-      <p id="chant">A Chance to <strong>Share Your Quotes</strong> with the World.</p>
+      <p id="chant">A Chance to Share Your Quotes with the World.</p>
       <hr>
 
 <div class="container-fluid">
@@ -15,7 +15,3 @@
     <div class="col-md-2" style="background-color:#123456"></div>
   </div>
 </div>
-
-<h1>
-  {{title}}
-</h1>
