--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -1,33 +1,29 @@
 <div class="row">
-  <div class="col-md-0"></div>
   <div class="col-md-5">
     <div class="form-group">
       <label for="description">Add a New Quote:</label>
       <textarea class="form-control" id="newquote" placeholder="Write Quote Here..."rows="3" required [(ngModel)]="newQuote"></textarea>
-  <br>
-    <div class="form-group">
-      <label for="name">Quote by:</label>
-      <input type="text" required class="form-control" id="name">
     </div>
   <br>
     <div class="form-group">
-      <label for="name">Submitted by:</label>
-      <input type="text" required class="form-control" id="name">
+      <label for="name">Author:</label>
+      <input type="text" required class="form-control" id="newauthor" placeholder="Author's name">
+    </div>
+  <br>
+    <div class="form-group">
+      <label for="name">Publisher:</label>
+      <input type="text" required class="form-control" id="name" placeholder="Publisher's name">
     </div>
       <a type="submit" class="btn btn-submit" style="color: blue" (click)="addQuote()"><strong>Add Quote</strong></a>
-    </div>
+
   </div>
   <div class="col-md-7">
     <p><strong>This is a list of All Quotes</strong></p>
     <p class="life-container" *ngFor="let quote of quotes; let i=index">
       {{ quote }}
       <br><a type="submit" class="btn btn-submit" style="color: red" (click)="deleteQuote()"><strong>Delete</strong></a>
-      <a type="submit" class="btn btn-submit" style="color: purple" (click)="likeQuote(i)"><strong>Like<i class="far fa-hand-point-right"></i></strong>{{ quote. upVote}}</a>
+      <a type="submit" class="btn btn-submit" style="color: purple" (click)="likeQuote()"><strong>Like<i class="far fa-hand-point-right"></i></strong>{{ quote. upVote}}</a>
       <a type="submit" class="btn btn-submit" style="color: brown" (click)="dislikeQuote()"><strong>Dislike</strong></a>
     </p>
   </div>
-  <div class="col-md-0"></div>
 </div>
-<p>
-
-</p>
